2013-05-26  Paul Smith  <psmith@gnu.org>

	* read.c (readline): To be safe, move the entire buffer if we
	detect a CR.  Fixes Savannah bug #38945.

	* job.c (new_job): Compare OUT to the beginning of the OUT
	var/function, not IN.  Fixes Savannah bug #39035.

2013-05-22  Paul Smith  <psmith@gnu.org>

	* main.c (switches[]): Order switches so simple flags all come first.
	(define_makeflags): Rework to make option passing more
	reliable and the code less tricksy.  Ensure simple flags are kept
	in the initial batch of flags.  Do not allow any flags with
	options in that batch.  If there are only non-simple flags MAKEFLAGS
	begins with ' '.
	(print_data_base): Print the version.  Fixes part of Savannah #35336.

	* read.c (eval_buffer): Initialize lineno.

2013-05-18  Alexey Pavlov  <alexpux@gmail.com>  (tiny change)

	* w32/Makefile.am (libw32_a_SOURCES): Add compat/posixfcn.c.

	* configure.ac (OUTPUT_SYNC): Define for mingw32 target.

	* job.c (construct_command_argv_internal) <sh_cmds_dos>
	[WINDOWS32]: Add "move".  Fixes Savannah bug #30714.

	* guile.c: Move inclusion of makeint.h before gnumake.h.  This
	order must be observed when building Make, because gnumake.h must
	be included with GMK_BUILDING_MAKE defined, which makeint.h
	already does.  Otherwise, the linker will look for, and fail to
	find, gmk_* functions in some external dynamic library.

2013-05-17  Benno Schulenberg  <bensberg@justemail.net>

	* main.c (decode_output_sync_flags): Fix output message.
	* read.c (EXTRANEOUS): Ditto.
	(record_files): Ditto.
	* remake.c (update_file_1): Ditto.

2013-05-17  Eli Zaretskii  <eliz@gnu.org>

	* main.c (prepare_mutex_handle_string): Define conditioned on
	OUTPUT_SYNC.

	* build_w32.bat: Copy config.h.W32 to config.h regardless of
	whether or not we are building from SCM.

2013-05-17  Paul Smith  <psmith@gnu.org>

	* configure.ac: Update version to 3.99.90.
	* NEWS: Ditto.

	* Source (*.[ch]): Remove TABs, use GNU coding styles.

	* ALL: Update copyright.
